--- a/package.json
+++ b/package.json
@@ -3,6 +3,39 @@
   "version": "0.0.1",
   "description": "An app for events with fellow Northwesterners",
   "main": "server.js",
+  
+  "dependencies": {
+    "express": "3.5.1",
+    "mongodb": "*",
+    "mongoose": "*",
+    "bcrypt-nodejs": "0.0.3",
+    "passport-local": "^1.0.0",
+    "passport": "^0.2.0",
+    "connect-flash": "^0.1.1",
+    "consolidate": "^0.10.0"
+  },
+
+  "devDependencies": {
+    "grunt-simple-mocha": "^0.4.0",
+    "grunt": "^0.4.3",
+    "grunt-contrib-watch": "^0.5.3",
+    "grunt-contrib-jshint": "^0.8.0",
+    "chai": "^1.9.0",
+    "grunt-express-server": "^0.4.13",
+    "grunt-contrib-copy": "^0.5.0",
+    "grunt-contrib-clean": "^0.5.0",
+    "grunt-sass": "^0.11.0",
+    "grunt-mongoimport": "^0.1.1",
+    "grunt-notify": "^0.2.20",
+    "handlebars": "^1.3.0",
+    "hbsfy": "^1.3.2",
+    "grunt-mocha-cov": "^0.2.1",
+    "mocha-term-cov-reporter": "^0.2.0",
+    "grunt-concurrent": "~0.5.0"
+  },
+
+
+
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
