Fixed build to be working properly

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,24 @@
-node_modules
+lib-cov/
+*.seed
+*.log
+*.csv
+*.dat
+*.out
+*.pid
+*.gz
+*.rdb
+
+pids/
+logs/
+results/
+
+npm-debug.log
 node_modules/
-bower_components
+test/acceptance/*-results.xml
+
+build/
+dist/
+app/bower_components/
+.sass-cache/
 bower_components/
+app/bower_components/
