--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "grunt-contrib-copy": "^0.5.0",
     "grunt-contrib-clean": "^0.5.0",
     "grunt-browserify": "^1.3.1",
+    "debowerify": "^0.7.0",
     "grunt-sass": "^0.11.0",
     "grunt-mongoimport": "^0.1.1",
     "grunt-notify": "^0.2.20",
