--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "hbsfy": "^1.3.2",
     "grunt-mocha-cov": "^0.2.1",
     "mocha-term-cov-reporter": "^0.2.0",
-    "grunt-concurrent": "~0.5.0"
+    "grunt-concurrent": "~0.5.0",
+    "superagent": "*"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
