--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bcrypt-nodejs": "0.0.3",
     "passport-local": "^1.0.0",
     "passport": "^0.2.0",
+    "passport-twitter": "^1.0.2",
     "connect-flash": "^0.1.1",
     "consolidate": "^0.10.0"
   },
