--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "superagent": "*"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "grunt travis"
+
   },
   "repository": {
     "type": "git",
