--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "passport-twitter": "^1.0.2",
     "passport-google-oauth":"~0.1.5",
     "connect-flash": "^0.1.1",
-    "consolidate": "^0.10.0"
+    "consolidate": "^0.10.0",
+    "grunt": "*"
   },
   "devDependencies": {
     "grunt-simple-mocha": "^0.4.0",
@@ -39,8 +40,8 @@
     "superagent": "*"
   },
   "scripts": {
-    "test": "grunt travis"
-
+    "test": "grunt travis",
+    "postInstall": "./node_modules/grunt/bin/grunt build:prod"
   },
   "repository": {
     "type": "git",
